packages/core/src/components/list-view-filter/styles.scss
.mining-sdk-list-view-filter {
  position: relative;
  display: inline-block;

  &__trigger {
    @include inline_flex_align;

    position: relative;
  }

  &__trigger {
    .mining-sdk-button {
      transition:
        color,
        border-color 200ms ease;

      &:hover {
        color: var(--mining-sdk-color-primary-hover-light);
        border-color: var(--mining-sdk-color-primary-hover-light);
      }

      &__label {
        gap: 8px;
        padding: 0 15px;
      }
    }
  }

  &__dropdown {
    max-width: 90vw;
    padding: 0;
    background-color: var(--mining-sdk-color-obsidian);
    border: unset;
  }

  &__header {
    padding: 12px;
    background-color: var(--mining-sdk-color-obsidian);
  }

  &__content {
    padding: 0;

    .mining-sdk-cascader {
      border: none;
      background: transparent;
    }

    // Override TagInput styles for filter context
    .mining-sdk-tag-input__wrapper {
      border: 1px solid var(--mining-sdk-border-default-color);
      border-radius: 0;
      margin-top: 8px;
      background-color: var(--mining-sdk-color-obsidian);
      padding: 0.25rem;
      width: 300px;
      .mining-sdk-tag-input__input {
        padding: 0 0.25rem;
      }

      &:focus-within {
        border-color: var(--mining-sdk-color-primary);
        box-shadow: 0 0 0 2px rgba(var(--mining-sdk-color-primary-rgb), 0.29);
      }
    }

    // Make cascader panels full width
    .mining-sdk-cascader__panels {
      border: none;
    }

    .mining-sdk-cascader__panel {
      &--categories {
        border-right: 1px solid var(--mining-sdk-border-default-color);
      }
    }
  }
}

// Global popover styles for filter
.mining-sdk-popover-content {
  &:has(.mining-sdk-list-view-filter__dropdown) {
    padding: 0;
  }
}

